@@ -1,3 +1,7 @@
+07-Jul-2015 Laurent Duflot
+	* makeDatasetList.py: when approx_GenFiltEff is not found for a dataset
+	look in its parents
+
 06-Jul-2015 Laurent Duflot
 	* makeDatasetList.py: list mc_channel_nb with no dataset found
 
